feat: 完成phase 0.2
