# src/routes/authRoutes.js
@@ -4,6 +4,7 @@ import {
   handleLogin,
   handleSendCode,
   handleGetMe,
+  handleSocialLogin,
 } from "../controllers/authController.js";
 import { authMiddleware } from "../middleware/authMiddleware.js";
 
@@ -12,6 +13,7 @@ const router = Router();
 // Public routes
 router.post("/sentotp", handleSendCode);
 router.post("/login", handleLogin);
+router.post("/social-login", handleSocialLogin);
 
 // Protected routes (require authentication)
 router.get("/me", authMiddleware, handleGetMe);
